--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
 <head>
 <title>ITxLog</title>
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
 <h1>ITxLog</h1>
+<br>
 <p>Please, complete this to get contact.</p>
-
+<br>
 <label for="name">Name</label>
 <input type="text" id="name">
 <br>
@@ -21,6 +23,7 @@
 <option value="spfe">spfe</option>
 </select>
 
+<br>
 <button type="button" onclick="submitFrom()">Envoyer</button>
 
 </body>
